--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shaw Talebi
 logo: /assets/img/headshot_circle.png
-#description: text below image
+#description: QA Tester portfolio
 show_downloads: true
 theme: jekyll-theme-minimal
